<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaipeiTour</string>
    <string name="view_details">View details</string>
    <string name="retry">Retry</string>
    <string name="no_data_available">No result match</string>
    <string name="address">Address\n%s</string>
    <string name="last_updated_time">Last Updated Time\n%s</string>
    <string name="open_time">Open Time\n%s</string>
    <string name="tradition_chinese" translatable="false">繁體中文</string>
    <string name="simplified_chinese" translatable="false">简体中文</string>
    <string name="english" translatable="false">English</string>
    <string name="japanese" translatable="false">日本語</string>
    <string name="korean" translatable="false">한국어</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="idonesian" translatable="false">Bahasa Indonesia</string>
    <string name="thai" translatable="false">ภาษาไทย</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
</resources>
